Revert "fixed a typo in the makefiles"
This reverts commit 0404e2fc5cbcd5ed8bc20a194ed056ef6bd06521.

--- a/kitsune/experiments/noforall/makefile
+++ b/kitsune/experiments/noforall/makefile
@@ -26,7 +26,7 @@ noforall.hip.${host_arch}: noforall.cpp
 	@${FILE_SIZE}
 
 run: $(targets) 
-	@echo "running generated executables..."
+	@echo "running generated exeutables..."
 	@$(foreach prog,$(targets),$(call RUN_test,$(prog)))
 
 .PHONY: all clean run
