fix bad context mistake -- relevant to multi-target thread-streams debugging... this is a temporary workaround and not a correctness guarantee for behaving well when opencilk and cuda targets are intermixed (it most certainly can also have performance implications).

--- a/kitsune/experiments/multi-target/makefile
+++ b/kitsune/experiments/multi-target/makefile
@@ -49,6 +49,9 @@ nested-launch.cuda.${host_arch}: nested-launch.cpp opencilk-cuda.cfg
 	@${FILE_SIZE}
 
 
+bug.cuda.${host_arch}: bug.cpp opencilk-cuda.cfg 
+	@${TIME_CMD} $(KIT_CXX)  $(TAPIR_OPENCILK_FLAGS) --config=./opencilk-cuda.cfg -o $@ $< 
+
 # hip 
 nested-launch.hip.${host_arch}: nested-launch.cpp opencilk-hip.cfg
 	@echo $@
