Disabled sync region optiizations (merging) due to issues with multi-target code.  While this could have performance implications in some situations it is the only way we can avoid errors with mixed threaded and GPU code.  More bugs may be lurking.
Also includes updates to the runtime to deal with exposing GPU streams
to the calling stack frame for correctly handling continuations.

--- a/kitsune/runtime/CMakeLists.txt
+++ b/kitsune/runtime/CMakeLists.txt
@@ -56,7 +56,8 @@ if (KITRT_ENABLE_CUDA)
   
   option(KITCUDA_ENABLE_NVTX "Enable NVTX profiling within the runtime" OFF)
   if (KITCUDA_ENABLE_NVTX)
-    add_definitions(-DKITCUDA_ENABLE_NVTX)
+    message(STATUS "  enabling NVTX profiling.")
+    add_compile_definitions(-DKITCUDA_ENABLE_NVTX)
   endif()
   add_definitions(-DKITRT_CUDA_ENABLED)
 
